# code-examples

./: .gitignore  README.md  dummy.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: new-example-template.md  update_example.md
.github/workflows/: blank.yml  ciTest.yml  myCITest.yml
PULL_REQUEST_TEMPLATE/: new_example.md  resolve_issue.md
cdk/hello-cdk/: package-lock.json
cdk/image/: cdk.json  package.json  rebuild.bat  setup.ts
cdk/image-recog/: .eslintignore  README.adoc  README.md  cdk.json  package.json  setup.ts  tsconfig.json
cdk/rust_example_lambda/src/dynamodb/: Cargo.toml  main.rs
cdk/trail-app/: README.md  cdk.json  package.json
dotnet/DeleteMe/: Program.cs
dotnet/DynamoDB/: Query1.csv  Query2.csv  Query3.csv  README.md  README.md~  customers.csv  orders.csv  products.csv
dotnet/MultiInherit/: Program.cs
dotnet/MyMpuApp/: MyMpuApp.csproj  Program - Copy.sc  Program.cs
dotnet/MyWidgetService/: cdk.json
dotnet/QuestionsService/: Example.html  QuestionsStack.yaml  cdk.json
dotnet/ReverseString/: Program.cs
dotnet/Serverless Web App with React, DynamoDb, and X-Ray/: Musiquizza-React.csproj
dotnet/TestQuestion/: Program.cs  README.md
go/dummy/: dummy_test.go
go/process-image/: ProcessImage.go  go.mod  (+3 more)
hello-cdk/: RecordTemplate.txt  package-lock.json  package.json
php/: StringInter.php  ab.php  reverse_string.php
ruby/: swizzle.rb
rust/dynamodb/: Cargo.toml  event2.json
rust/dynamodb/src/: main.rs
rust/lambda-test/: Cargo.toml
rust/lambda-test/src/: main.rs
scripts/: checkin_tests.py  script.sh
(+236 files in other folders)
