[package]
name = "lambda-test"
version = "0.1.0"
edition = "2021"
authors = ["Doug Schwartz<dougsch@amazon.com>"]
license = "YOUR-LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3.0"
# We are using the Amazon Simple Storage Service (Amazon S3) crate in this example,
# but you can use any SDK crate in your Lambda code.
aws-sdk-s3 = "0.3.0"
tokio = { version = "1", features = ["full"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4"
log = "0.4"
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
